--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,8 @@
                 <configuration>
                     <!-- Java EE 6 doesn't require web.xml, Maven needs to catch up! -->
                     <failOnMissingWebXml>false</failOnMissingWebXml>
+		    <outputDirectory>deployments</outputDirectory>
+                    <warName>ROOT</warName>
                 </configuration>
             </plugin>
             <!-- JBoss AS plugin to deploy war -->
